# mini-studio2.0

./: .gitignore  CMakeLists.txt  mini-studio2.0.sln
mini-studio2.0/: Camera.h  LevelManager.cpp  LevelManager.h  Parallax.cpp  Parallax.h  PlatformsTest.cpp  PlatformsTest.h  PlayerAnimation.cpp  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  background.cpp  background.h  bouton.cpp  bouton.h  camera.h  clients.cpp  clients.h  collectables.cpp  collectables.h  collisions.cpp  collisions.h  dashOrb.cpp  dashOrb.h  dashSystem.cpp  dashSystem.h  entity.h  gameOverScreen.cpp  gameOverScreen.h  gameTime.cpp  gameTime.h  goal.cpp  goal.h  input.cpp  input.h  levelManager.cpp  levelManager.h  mini-studio2.0.cpp  mini-studio2.0.vcxproj  (+24 more)
mini-studio2.0/mini-studio2.0/: Camera.cpp  Camera.h  mini-studio2.0.cpp  mini-studio2.0.vcxproj  mini-studio2.0.vcxproj.filters
mini-studio2.0/x64/Debug/: mini-studio2.0.exe.recipe  mini-studio2.0.ilk  vc143.idb
mini-studio2.0/x64/Debug/mini-studio2.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link-cvtres.read.1.tlog  link-rc.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.read.2.tlog  link.read.3.tlog  link.read.4.tlog  link.secondary.1.tlog  link.write.1.tlog  mini-studio2.0.lastbuildstate
mini-studio2.0/x64/Release/: mini-studio2.0.exe.recipe  mini-studio2.0.iobj  mini-studio2.0.ipdb
mini-studio2.0/x64/Release/mini-studio2.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  (+1 more)
